--- a/style.css
+++ b/style.css
@@ -1,5 +1,29 @@
 body {
   width: 100%;
-  height: 100%;
-  margin: 0;
+  background-color: #fff;
+  font-family: Arial, Helvetica, sans-serif 
+}
+
+header h1, nav{
+  text-align: center
+}
+
+header a{
+padding-left: 10px;
+padding-right: 10px;
+}
+
+#featured-property {
+  text-align: center
+}
+
+#featured-property p{
+  justify-content: center
+}
+
+#details div {
+  float: left;
+  align: center;
+  width: 25%;
+  background-color: rgb(172, 34, 34);
 }
